README-testing,fix-overlap legend for galaxy fold size screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,7 +110,8 @@
 }
 
 .lp-contact legend {
-    text-align: center;    
+    text-align: center;
+    margin-bottom: 15px;    
 }
 
 .lp-contact legend span {
